unpackaged/main/default/objects/ETI_Booking__c/fields/Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Email</label>
    <type>Email</type>
</CustomField>