unpackaged/main/default/objects/ETI_Booking__c/fields/ADFCA_Permit_Type__c.field-meta.xml
<CustomField>
    <fullName>ADFCA_Permit_Type__c</fullName>
    <label>ADFCA Permit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abu dhabi Permit Vehicle</fullName>
            </value>
            <value>
                <fullName>Non Abu dhabi Permit Vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>