unpackaged/main/default/objects/ETI_Booking__c/fields/Allocated_Lane__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Lane__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allocated Lane</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>ETI_Lane_Details__c.ET_Location__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.ET_Location__c</valueField>
        </filterItems>
        <filterItems>
            <field>ETI_Lane_Details__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Certificate_Lane</value>
        </filterItems>
        <filterItems>
            <field>ETI_Lane_Details__c.Lane_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ETI_Lane_Details__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>