unpackaged/main/default/objects/ETI_Booking__c/fields/AMAN_Booking_No__c.field-meta.xml
<CustomField>
    <fullName>AMAN_Booking_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AMAN Booking No</label>
    <length>20</length>
    <type>Text</type>
</CustomField>