unpackaged/main/default/objects/ETI_Booking__c/fields/AMAN_Last_Lane_Type__c.field-meta.xml
<CustomField>
    <fullName>AMAN_Last_Lane_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>AMAN Last Lane Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>