unpackaged/main/default/objects/ETI_Booking__c/fields/Booking_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date_Time__c</fullName>
    <description>IF(NOT(ISBLANK(TEXT(ETI_Booking_slots__c))), DATETIMEVALUE(TEXT(Booking_Date__c)&amp;&quot; &quot; 
&amp;TEXT(VALUE(LEFT(TEXT(ETI_Booking_slots__c),2))-4)
&amp;&quot;:&quot;&amp;RIGHT(TEXT(ETI_Booking_slots__c),2)&amp;&quot;:00&quot;) , DATETIMEVALUE(TEXT(Booking_Date__c)&amp;&quot; &quot; 
&amp;TEXT(VALUE(LEFT(TEXT(Preferred_Time__c),2))-4)
&amp;&quot;:&quot;&amp;RIGHT(TEXT(Preferred_Time__c),2)&amp;&quot;:00&quot;))</description>
    <formula>IF(NOT(ISBLANK(TEXT(ETI_Booking_slots__c))), DATETIMEVALUE(TEXT(Booking_Date__c)&amp;&quot; &quot;
&amp;TEXT(VALUE(LEFT(TEXT(ETI_Booking_slots__c),2))-4)
&amp;&quot;:&quot;&amp;RIGHT(TEXT(ETI_Booking_slots__c),2)&amp;&quot;:00&quot;),IF(NOT(ISBLANK(TEXT(Preferred_Time__c))),DATETIMEVALUE(TEXT(Booking_Date__c)&amp;&quot; &quot;
&amp;TEXT(VALUE(LEFT(TEXT(Preferred_Time__c),2))-4)
&amp;&quot;:&quot;&amp;RIGHT(TEXT(Preferred_Time__c),2)&amp;&quot;:00&quot;),DATETIMEVALUE(TEXT(Booking_Date__c)&amp;&quot; &quot;&amp;&quot;00:00:00&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>