unpackaged/main/default/objects/ETI_Booking__c/fields/Certificate_Services__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Services__c</fullName>
    <label>Certificate Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change Chassis Certificate</fullName>
            </value>
            <value>
                <fullName>Change Color Certificate</fullName>
            </value>
            <value>
                <fullName>Change Vehicle Type Certificate</fullName>
            </value>
            <value>
                <fullName>Print Chassis On Trailer Certificate</fullName>
            </value>
            <value>
                <fullName>Advertisement Certificate</fullName>
            </value>
            <value>
                <fullName>Full Paint Certificate</fullName>
            </value>
            <value>
                <fullName>Print Chassis Certificate</fullName>
            </value>
            <value>
                <fullName>Change Chassis-Outside Certificate  Company</fullName>
            </value>
            <value>
                <fullName>Change Vehicle Type-Outside Company</fullName>
            </value>
            <value>
                <fullName>Change Color-Outside Certificate Company</fullName>
            </value>
            <value>
                <fullName>Print Chassis On Trailer-Outside Certificate Company</fullName>
            </value>
            <value>
                <fullName>Print Chassis-Outside Certificate</fullName>
            </value>
            <value>
                <fullName>Full Paint-Outside Company</fullName>
            </value>
            <value>
                <fullName>Change Chassis-Outside Certificate Private</fullName>
            </value>
            <value>
                <fullName>Change Vehicle Type-Outside Certificate private</fullName>
            </value>
            <value>
                <fullName>Change Color-Outside Certificate private</fullName>
            </value>
            <value>
                <fullName>Print Chassis On Trailer-Outside Certificate Private</fullName>
            </value>
            <value>
                <fullName>Print Chassis-Outside Certificate private</fullName>
            </value>
            <value>
                <fullName>Full Paint-Outside Certificate private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>