unpackaged/main/default/objects/ETI_Booking__c/fields/Customer_Site_Geometry__c.field-meta.xml
<CustomField>
    <fullName>Customer_Site_Geometry__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Site  Geometry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>