unpackaged/main/default/objects/ETI_Booking__c/fields/Customer_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Customer_Vehicle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer Vehicle</label>
    <referenceTo>ET_Customer_Vehicle__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>