unpackaged/main/default/objects/ETI_Booking__c/fields/ET_Location__c.field-meta.xml
<CustomField>
    <fullName>ET_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>ET_Location__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>