unpackaged/main/default/objects/ETI_Booking__c/fields/ETI_Branch__c.field-meta.xml
<CustomField>
    <fullName>ETI_Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <referenceTo>ETI_Branch__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>