unpackaged/main/default/objects/ETI_Booking__c/fields/ETI_Inspector_Name__c.field-meta.xml
<CustomField>
    <fullName>ETI_Inspector_Name__c</fullName>
    <formula>if(Inspector__c !=null, Inspector__r.Name, &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inspector Name</label>
    <type>Text</type>
</CustomField>