unpackaged/main/default/objects/ETI_Booking__c/fields/ETI_Pick_Up_Location__c.field-meta.xml
<CustomField>
    <fullName>ETI_Pick_Up_Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Equipment Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>