unpackaged/main/default/objects/ETI_Booking__c/fields/ETI_Schedule_Appointment__c.field-meta.xml
<CustomField>
    <fullName>ETI_Schedule_Appointment__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Schedule Appointment</label>
    <type>Checkbox</type>
</CustomField>