unpackaged/main/default/objects/ETI_Booking__c/fields/Has_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Has_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Receipt ?</label>
    <type>Checkbox</type>
</CustomField>