unpackaged/main/default/objects/ETI_Booking__c/fields/Is_Auto_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Is_Auto_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Auto Cancelled?</label>
    <type>Checkbox</type>
</CustomField>