unpackaged/main/default/objects/ETI_Booking__c/fields/Is_booking_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Is_booking_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is booking  Confirmed?</label>
    <type>Checkbox</type>
</CustomField>