unpackaged/main/default/objects/ETI_Booking__c/fields/Is_ReTest_Booking__c.field-meta.xml
<CustomField>
    <fullName>Is_ReTest_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is ReTest Booking</label>
    <type>Checkbox</type>
</CustomField>