unpackaged/main/default/objects/ETI_Booking__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Location1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>