unpackaged/main/default/objects/ETI_Booking__c/fields/MNVR_Brand__c.field-meta.xml
<CustomField>
    <fullName>MNVR_Brand__c</fullName>
    <label>MNVR Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hikvision</fullName>
            </value>
            <value>
                <fullName>Dahua</fullName>
            </value>
            <value>
                <fullName>Streamax</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>