unpackaged/main/default/objects/ETI_Booking__c/fields/MNVR_Brand_Other__c.field-meta.xml
<CustomField>
    <fullName>MNVR_Brand_Other__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MNVR Brand Other</label>
    <length>250</length>
    <type>Text</type>
</CustomField>