unpackaged/main/default/objects/ETI_Booking__c/fields/MNVR_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>MNVR_Serial_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MNVR Serial Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>