unpackaged/main/default/objects/ETI_Booking__c/fields/Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mobile No</label>
    <length>13</length>
    <type>Text</type>
</CustomField>