unpackaged/main/default/objects/ETI_Booking__c/fields/Parent_Booking__c.field-meta.xml
<CustomField>
    <fullName>Parent_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Booking</label>
    <referenceTo>ETI_Booking__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>