unpackaged/main/default/objects/ETI_Booking__c/fields/Place_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Service__c</fullName>
    <label>Place of Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ocean/Island</fullName>
            </value>
            <value>
                <fullName>Home/Office Premise</fullName>
            </value>
            <value>
                <fullName>Ocean/Island-B2B</fullName>
            </value>
            <value>
                <fullName>Home/Office Premise-B2B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>