unpackaged/main/default/objects/ETI_Booking__c/fields/Purpose_Type__c.field-meta.xml
<CustomField>
    <fullName>Purpose_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purpose Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>ETI_Aman_Lookup__c.ETI_LookupType__c</field>
            <operation>equals</operation>
            <value>TEST_PURPOSE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ETI_Aman_Lookup__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>