unpackaged/main/default/objects/ETI_Booking__c/fields/Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Registration Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>