unpackaged/main/default/objects/ETI_Booking__c/fields/Requested_Services_Count__c.field-meta.xml
<CustomField>
    <fullName>Requested_Services_Count__c</fullName>
    <label>Requested Services Count</label>
    <summaryForeignKey>ETI_Service_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>