unpackaged/main/default/objects/ETI_Booking__c/fields/Selected_Services__c.field-meta.xml
<CustomField>
    <fullName>Selected_Services__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Selected Services</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>