unpackaged/main/default/objects/ETI_Booking__c/fields/Selected_Services_Code__c.field-meta.xml
<CustomField>
    <fullName>Selected_Services_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Selected Services Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>