unpackaged/main/default/objects/ETI_Booking__c/fields/Test_result_page__c.field-meta.xml
<CustomField>
    <fullName>Test_result_page__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Test result page</label>
    <type>Url</type>
</CustomField>