unpackaged/main/default/objects/ETI_Booking__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Amount</label>
    <summarizedField>ETI_Service_Line_Item__c.Total_Fee__c</summarizedField>
    <summaryForeignKey>ETI_Service_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>