unpackaged/main/default/objects/ETI_Booking__c/fields/Total_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_Fee__c</fullName>
    <label>Total Fee</label>
    <summarizedField>ETI_Service_Line_Item__c.Fee_Amount__c</summarizedField>
    <summaryForeignKey>ETI_Service_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>