unpackaged/main/default/objects/ETI_Booking__c/fields/Total_Tax__c.field-meta.xml
<CustomField>
    <fullName>Total_Tax__c</fullName>
    <label>Total Tax</label>
    <summarizedField>ETI_Service_Line_Item__c.Tax_Amount__c</summarizedField>
    <summaryForeignKey>ETI_Service_Line_Item__c.Booking__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>