unpackaged/main/default/objects/ETI_Booking__c/fields/Vehicle_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Number__c</fullName>
    <formula>Customer_Vehicle__r.Plate_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Number</label>
    <type>Text</type>
</CustomField>