unpackaged/main/default/objects/ETI_Booking__c/fields/Vehicle_Service__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Service</label>
    <referenceTo>ETI_Vehicle_Service__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>