unpackaged/main/default/objects/ETI_Booking__c/recordTypes/External.recordType-meta.xml
<RecordType>
    <fullName>External</fullName>
    <active>true</active>
    <label>External</label>
</RecordType>