unpackaged/main/default/objects/ETI_Booking__c/recordTypes/Walk_In.recordType-meta.xml
<RecordType>
    <fullName>Walk_In</fullName>
    <active>true</active>
    <label>Walk In</label>
</RecordType>