unpackaged/main/default/objects/ETI_Booking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Service_Request__c</columns>
    <columns>Customer_Vehicle__c</columns>
    <columns>Service_Type__c</columns>
    <columns>ET_Location__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Test_Result__c</columns>
    <columns>Booking_Status__c</columns>
    <columns>Booking_Date__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>