unpackaged/main/default/objects/ETI_Booking__c/listViews/Cancelled_Bookings.listView-meta.xml
<ListView>
    <fullName>Cancelled_Bookings</fullName>
    <columns>NAME</columns>
    <columns>Service_Request__c</columns>
    <columns>Customer_Vehicle__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Selected_Services__c</columns>
    <columns>Booking_Date__c</columns>
    <columns>Booking_Status__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Booking_Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Cancelled Bookings</label>
    <language>en_US</language>
</ListView>