unpackaged/main/default/objects/ETI_Booking__c/listViews/Customer_Premises_Bookings.listView-meta.xml
<ListView>
    <fullName>Customer_Premises_Bookings</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>AMAN_Booking_No__c</columns>
    <columns>Amount__c</columns>
    <columns>Booking_Status__c</columns>
    <columns>Inspector__c</columns>
    <columns>Vehicle_Number__c</columns>
    <columns>Payment_Type__c</columns>
    <columns>Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Premises__c</field>
        <operation>equals</operation>
        <value>Customer Premises</value>
    </filters>
    <label>Customer Premises Bookings</label>
</ListView>