unpackaged/main/default/objects/ETI_Booking__c/listViews/External_Bookings.listView-meta.xml
<ListView>
    <fullName>External_Bookings</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Service_Request__c</columns>
    <columns>Customer_Vehicle__c</columns>
    <columns>ET_Location__c</columns>
    <columns>Booking_Status__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Booking_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ETI_Booking__c.External</value>
    </filters>
    <label>External Bookings</label>
    <language>en_US</language>
</ListView>