unpackaged/main/default/objects/ETI_Booking__c/listViews/Internal_Booking.listView-meta.xml
<ListView>
    <fullName>Internal_Booking</fullName>
    <columns>NAME</columns>
    <columns>Customer_Vehicle__c</columns>
    <columns>ET_Location__c</columns>
    <columns>Service_Request__c</columns>
    <columns>Booking_Status__c</columns>
    <columns>Payment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>ETI_Booking__c.Internal</value>
    </filters>
    <label>Internal Booking</label>
</ListView>