unpackaged/main/default/objects/ETI_Booking__c/listViews/Mussafah_Bookings.listView-meta.xml
<ListView>
    <fullName>Mussafah_Bookings</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Booking_Date_Time__c</columns>
    <columns>Booking_Status__c</columns>
    <columns>ET_Location__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ET_Location__c</field>
        <operation>equals</operation>
        <value>Mussafah Inspection Centre</value>
    </filters>
    <label>Mussafah Bookings</label>
</ListView>