unpackaged/main/default/objects/ETI_Booking__c/listViews/Test_Pass_Bookings.listView-meta.xml
<ListView>
    <fullName>Test_Pass_Bookings</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Customer_Vehicle__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Selected_Services__c</columns>
    <columns>Booking_Status__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Test_Result__c</columns>
    <columns>Booking_Date__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Test_Result__c</field>
        <operation>equals</operation>
        <value>Pass,Approved</value>
    </filters>
    <label>Test Pass Bookings</label>
    <language>en_US</language>
</ListView>