unpackaged/main/default/objects/ETI_Booking__c/listViews/Today_Inspection_Bookings.listView-meta.xml
<ListView>
    <fullName>Today_Inspection_Bookings</fullName>
    <columns>NAME</columns>
    <columns>Service_Request__c</columns>
    <columns>Customer_Vehicle__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Selected_Services__c</columns>
    <columns>ETI_Selected_Lane__c</columns>
    <columns>Booking_Date__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Booking_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today Inspection Bookings</label>
    <language>en_US</language>
</ListView>